welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:8: error: not found: value biscuit
if(2*biscuit == caseOrange + 1){
     ^RunHalf:14: error: not found: value biscuit
		biscuit=biscuit+1
                ^