welcome.lessons.welcome.variables.RunHalf.scala.code
var arret = false;
var biscuits = 0
var caseOrange = 0

while(!arret){

if(2*biscuit == caseOrange + 1){
	arret=true
}
else{
	avance()
	if(estSurBiscuit()){
		biscuit=biscuit+1
	}
	if(estSurOrange()){
		caseOrange=caseOrange+1
	}
}
	
}
